@@ -2,6 +2,7 @@ package com.sparrowwallet.sparrow.control;
 
 import com.google.common.eventbus.Subscribe;
 import com.sparrowwallet.drongo.KeyDerivation;
+import com.sparrowwallet.drongo.OsType;
 import com.sparrowwallet.drongo.SecureString;
 import com.sparrowwallet.drongo.address.Address;
 import com.sparrowwallet.drongo.address.InvalidAddressException;
@@ -9,7 +10,12 @@ import com.sparrowwallet.drongo.crypto.Bip322;
 import com.sparrowwallet.drongo.crypto.ECKey;
 import com.sparrowwallet.drongo.policy.PolicyType;
 import com.sparrowwallet.drongo.protocol.ScriptType;
+import com.sparrowwallet.drongo.psbt.PSBT;
+import com.sparrowwallet.drongo.psbt.PSBTInput;
 import com.sparrowwallet.drongo.wallet.*;
+import com.sparrowwallet.hummingbird.registry.CryptoPSBT;
+import com.sparrowwallet.sparrow.io.bbqr.BBQR;
+import com.sparrowwallet.sparrow.io.bbqr.BBQRType;
 import com.sparrowwallet.sparrow.AppServices;
 import com.sparrowwallet.sparrow.EventManager;
 import com.sparrowwallet.sparrow.event.*;
@@ -17,10 +23,11 @@ import com.sparrowwallet.sparrow.glyphfont.FontAwesome5;
 import com.sparrowwallet.sparrow.glyphfont.FontAwesome5Brands;
 import com.sparrowwallet.sparrow.io.Storage;
 import javafx.application.Platform;
+import javafx.scene.Node;
 import javafx.scene.control.*;
-import javafx.scene.image.Image;
-import javafx.scene.image.ImageView;
 import javafx.scene.layout.VBox;
+import javafx.stage.FileChooser;
+import javafx.stage.Stage;
 import org.controlsfx.control.SegmentedButton;
 import org.controlsfx.glyphfont.Glyph;
 import org.controlsfx.validation.ValidationResult;
@@ -32,16 +39,20 @@ import tornadofx.control.Field;
 import tornadofx.control.Fieldset;
 import tornadofx.control.Form;
 
+import java.io.*;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.security.SignatureException;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Locale;
-import java.util.Optional;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import static com.sparrowwallet.sparrow.AppServices.showErrorDialog;
 
 public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
     private static final Logger log = LoggerFactory.getLogger(MessageSignDialog.class);
+
+    private static final Pattern signedMessagePattern = Pattern.compile("-----BEGIN BITCOIN SIGNED MESSAGE-----\\r?\\n(.*)\\r?\\n-----BEGIN BITCOIN SIGNATURE-----\\r?\\n(.*)\\r?\\n(.*)\\r?\\n-----END BITCOIN SIGNATURE-----\r?\n?");
 
     private final TextField address;
     private final TextArea message;
@@ -104,19 +115,13 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
         this.wallet = wallet;
         this.walletNode = walletNode;
 
-        final DialogPane dialogPane = getDialogPane();
+        final DialogPane dialogPane = new MessageSignDialogPane();
+        setDialogPane(dialogPane);
         dialogPane.getStylesheets().add(AppServices.class.getResource("general.css").toExternalForm());
         dialogPane.getStylesheets().add(AppServices.class.getResource("dialog.css").toExternalForm());
         AppServices.setStageIcon(dialogPane.getScene().getWindow());
         dialogPane.setHeaderText(title == null ? (wallet == null ? "Verify Message" : "Sign/Verify Message") : title);
-
-        Image image = new Image("image/seed.png", 50, 50, false, false);
-        if (!image.isError()) {
-            ImageView imageView = new ImageView();
-            imageView.setSmooth(false);
-            imageView.setImage(image);
-            dialogPane.setGraphic(imageView);
-        }
+        dialogPane.setGraphic(new WalletModelImage(WalletModel.SEED));
 
         VBox vBox = new VBox();
         vBox.setSpacing(20);
@@ -132,6 +137,7 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
         address.getStyleClass().add("id");
         address.setEditable(walletNode == null);
         address.setTooltip(new Tooltip("Only singlesig addresses can sign"));
+        address.setSkin(new AddressTextFieldSkin(address));
         addressField.getInputs().add(address);
 
         if(walletNode != null) {
@@ -154,6 +160,17 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
         signature.setStyle("-fx-pref-height: 80px");
         signature.setWrapText(true);
         signature.setOnMouseClicked(event -> signature.selectAll());
+
+        ContextMenu signatureMenu = new ContextMenu();
+        MenuItem copyItem = new MenuItem("Copy");
+        copyItem.setOnAction(e -> signature.copy());
+        MenuItem pasteItem = new MenuItem("Paste");
+        pasteItem.setOnAction(e -> signature.paste());
+        MenuItem clearItem = new MenuItem("Clear");
+        clearItem.setOnAction(e -> signature.clear());
+        signatureMenu.getItems().addAll(copyItem, pasteItem, clearItem);
+        signature.setContextMenu(signatureMenu);
+
         signatureField.getInputs().add(signature);
 
         Field formatField = new Field();
@@ -199,13 +216,7 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
         } else {
             dialogPane.getButtonTypes().addAll(showQrButtonType, signButtonType, verifyButtonType, doneButtonType);
 
-            Button showQrButton = (Button) dialogPane.lookupButton(showQrButtonType);
-            showQrButton.setDisable(wallet == null);
-            showQrButton.setGraphic(getGlyph(new Glyph(FontAwesome5.FONT_NAME, FontAwesome5.Glyph.QRCODE)));
-            showQrButton.setGraphicTextGap(5);
-            showQrButton.setOnAction(event -> {
-                showQr();
-            });
+            Node showQrButton = dialogPane.lookupButton(showQrButtonType);
 
             Button signButton = (Button) dialogPane.lookupButton(signButtonType);
             signButton.setDisable(!canSign);
@@ -244,10 +255,20 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
                         setFormatFromScriptType(address.getScriptType());
                         if(wallet != null) {
                             setWalletNodeFromAddress(wallet, address);
+                            if(walletNode != null) {
+                                setFormatFromScriptType(walletNode.getWallet().getScriptType());
+                            }
                         }
                     } catch(InvalidAddressException e) {
                         //can't happen
                     }
+                }
+            });
+
+            formatGroup.selectedToggleProperty().addListener((_, _, newVal) -> {
+                if(wallet != null) {
+                    boolean canSignSelectedFormat = canSignAllFormats(wallet) || newVal == formatElectrum;
+                    signButton.setDisable(!isValidAddress() || !canSign || !canSignSelectedFormat);
                 }
             });
         }
@@ -267,7 +288,7 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
 
         AppServices.onEscapePressed(dialogPane.getScene(), () -> setResult(ButtonBar.ButtonData.CANCEL_CLOSE));
         AppServices.moveToActiveWindowScreen(this);
-        setResultConverter(dialogButton -> dialogButton == showQrButtonType || dialogButton == signButtonType || dialogButton == verifyButtonType ? ButtonBar.ButtonData.APPLY : dialogButton.getButtonData());
+        setResultConverter(dialogButton -> dialogButton == signButtonType || dialogButton == verifyButtonType ? ButtonBar.ButtonData.APPLY : dialogButton.getButtonData());
 
         Platform.runLater(() -> {
             if(address.getText().isEmpty()) {
@@ -277,7 +298,7 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
             }
 
             if(wallet != null && walletNode != null) {
-                setFormatFromScriptType(wallet.getScriptType());
+                setFormatFromScriptType(walletNode.getWallet().getScriptType());
             } else {
                 formatGroup.selectToggle(formatElectrum);
             }
@@ -285,15 +306,19 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
     }
 
     private void checkWalletSigning(Wallet wallet) {
-        if(wallet.getKeystores().size() != 1) {
-            throw new IllegalArgumentException("Cannot sign messages using a wallet with multiple keystores - a single key is required");
+        if(wallet.getKeystores().size() != 1 || (wallet.getPolicyType() != PolicyType.SINGLE_HD && wallet.getPolicyType() != PolicyType.SINGLE_SP)) {
+            throw new IllegalArgumentException("Cannot sign messages using this wallet type");
         }
     }
 
     private boolean canSign(Wallet wallet) {
-        return wallet.getKeystores().get(0).hasPrivateKey()
-                || wallet.getKeystores().get(0).getSource() == KeystoreSource.HW_USB
-                || wallet.getKeystores().get(0).getWalletModel().isCard();
+        return wallet.getKeystores().getFirst().hasPrivateKey()
+                || wallet.getKeystores().getFirst().getSource() == KeystoreSource.HW_USB
+                || wallet.getKeystores().getFirst().getWalletModel().isCard();
+    }
+
+    private boolean canSignAllFormats(Wallet wallet) {
+        return wallet.getKeystores().getFirst().hasPrivateKey();
     }
 
     private Address getAddress()throws InvalidAddressException {
@@ -307,7 +332,7 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
     private boolean isValidAddress() {
         try {
             Address address = getAddress();
-            return address.getScriptType().isAllowed(PolicyType.SINGLE) || address.getScriptType() == ScriptType.P2SH;
+            return address.getScriptType().isAllowed(PolicyType.SINGLE_HD) || address.getScriptType() == ScriptType.P2SH;
         } catch (InvalidAddressException e) {
             return false;
         }
@@ -349,7 +374,7 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
 
         //Note we can expect a single keystore due to the check in the constructor
         Wallet signingWallet = walletNode.getWallet();
-        if(signingWallet.getKeystores().get(0).hasPrivateKey()) {
+        if(signingWallet.getKeystores().getFirst().hasPrivateKey()) {
             if(signingWallet.isEncrypted()) {
                 EventManager.get().post(new RequestOpenWalletsEvent());
             } else {
@@ -362,19 +387,25 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
 
     private void signUnencryptedKeystore(Wallet decryptedWallet) {
         try {
-            Keystore keystore = decryptedWallet.getKeystores().get(0);
-            ECKey privKey = keystore.getKey(walletNode);
+            Keystore keystore = decryptedWallet.getKeystores().getFirst();
             String signatureText;
-            if(isBip322()) {
-                ScriptType scriptType = decryptedWallet.getScriptType();
-                signatureText = Bip322.signMessageBip322(scriptType, message.getText().trim(), privKey);
+            if(decryptedWallet.getPolicyType() == PolicyType.SINGLE_SP) {
+                ECKey spendPrivKey = keystore.getSpendPrivateKey(Collections.emptyMap());
+                signatureText = Bip322.signMessageBip322Sp(walletNode.getAddress(), message.getText().trim(), spendPrivKey, walletNode.getSilentPaymentTweak());
+                spendPrivKey.clear();
             } else {
-                ScriptType scriptType = isElectrumSignatureFormat() ? ScriptType.P2PKH : decryptedWallet.getScriptType();
-                signatureText = privKey.signMessage(message.getText().trim(), scriptType);
+                ECKey privKey = keystore.getKey(walletNode);
+                if(isBip322()) {
+                    ScriptType scriptType = decryptedWallet.getScriptType();
+                    signatureText = Bip322.signMessageBip322(scriptType, message.getText().trim(), privKey);
+                } else {
+                    ScriptType scriptType = isElectrumSignatureFormat() ? ScriptType.P2PKH : decryptedWallet.getScriptType();
+                    signatureText = privKey.signMessage(message.getText().trim(), scriptType);
+                }
+                privKey.clear();
             }
             signature.clear();
             signature.appendText(signatureText);
-            privKey.clear();
         } catch(Exception e) {
             log.error("Could not sign message", e);
             AppServices.showErrorDialog("Could not sign message", e.getMessage());
@@ -382,8 +413,8 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
     }
 
     private void signDeviceKeystore(Wallet deviceWallet) {
-        List<String> fingerprints = List.of(deviceWallet.getKeystores().get(0).getKeyDerivation().getMasterFingerprint());
-        KeyDerivation fullDerivation = deviceWallet.getKeystores().get(0).getKeyDerivation().extend(walletNode.getDerivation());
+        List<String> fingerprints = List.of(deviceWallet.getKeystores().getFirst().getKeyDerivation().getMasterFingerprint());
+        KeyDerivation fullDerivation = deviceWallet.getKeystores().getFirst().getKeyDerivation().extend(walletNode.getDerivation());
         DeviceSignMessageDialog deviceSignMessageDialog = new DeviceSignMessageDialog(fingerprints, deviceWallet, message.getText().trim(), fullDerivation);
         deviceSignMessageDialog.initOwner(getDialogPane().getScene().getWindow());
         Optional<String> optSignature = deviceSignMessageDialog.showAndWait();
@@ -450,17 +481,22 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
         if(scriptType == ScriptType.P2SH) {
             scriptType = ScriptType.P2SH_P2WPKH;
         }
-        if(!ScriptType.getScriptTypesForPolicyType(PolicyType.SINGLE).contains(scriptType)) {
+        if(!ScriptType.getScriptTypesForPolicyType(PolicyType.SINGLE_HD).contains(scriptType)) {
             throw new IllegalArgumentException("Only single signature P2PKH, P2SH-P2WPKH or P2WPKH addresses can verify messages.");
         }
 
-        Address signedMessageAddress = scriptType.getAddress(signedMessageKey);
+        Address signedMessageAddress = scriptType.getAddress(PolicyType.SINGLE_HD, signedMessageKey);
         return providedAddress.equals(signedMessageAddress);
     }
 
     private void showQr() {
         if(walletNode == null) {
             AppServices.showErrorDialog("Address not in wallet", "The provided address is not present in the currently selected wallet.");
+            return;
+        }
+
+        if(isBip322()) {
+            showBip322Qr();
             return;
         }
 
@@ -477,13 +513,88 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
         }
     }
 
+    private void showBip322Qr() {
+        Wallet signingWallet = walletNode.getWallet();
+        PSBT psbt = buildBip322Psbt(signingWallet);
+
+        byte[] psbtBytes = psbt.getForExport().serialize();
+        CryptoPSBT cryptoPSBT = new CryptoPSBT(psbtBytes);
+        BBQR bbqr = new BBQR(BBQRType.PSBT, psbtBytes);
+        QRDisplayDialog qrDisplayDialog = new QRDisplayDialog(cryptoPSBT.toUR(), bbqr, false, true, QREncoding.UR);
+        qrDisplayDialog.initOwner(getDialogPane().getScene().getWindow());
+        Optional<ButtonType> optButtonType = qrDisplayDialog.showAndWait();
+        if(optButtonType.isPresent() && optButtonType.get().getButtonData() == ButtonBar.ButtonData.OK_DONE) {
+            scanQr();
+        }
+    }
+
+    private PSBT buildBip322Psbt(Wallet signingWallet) {
+        if(signingWallet.getPolicyType() == PolicyType.SINGLE_SP) {
+            Keystore keystore = signingWallet.getKeystores().getFirst();
+            ECKey spendPubKey = keystore.getSilentPaymentScanAddress().getSpendKey();
+            KeyDerivation spendDerivation = new KeyDerivation(keystore.getKeyDerivation().getMasterFingerprint(), KeyDerivation.writePath(KeyDerivation.getBip352SpendDerivation(keystore.getKeyDerivation().getDerivation())));
+            return Bip322.getBip322PsbtSp(walletNode.getAddress(), message.getText().trim(), walletNode.getSilentPaymentTweak(), Map.of(spendPubKey, spendDerivation));
+        }
+
+        PSBT psbt = Bip322.getBip322Psbt(signingWallet.getScriptType(), walletNode.getAddress(), message.getText().trim());
+        addBip322DerivationInfo(psbt, signingWallet);
+
+        return psbt;
+    }
+
+    private String extractBip322Signature(PSBT signedPsbt) {
+        String psbtMessage = signedPsbt.getGenericSignedMessage();
+        if(psbtMessage != null && !psbtMessage.equals(message.getText().trim())) {
+            Optional<ButtonType> response = AppServices.showWarningDialog("Message mismatch",
+                    "The message in the signed PSBT does not match the message in this dialog.\n\nPSBT message: " + psbtMessage +
+                            "\n\nContinue extracting the signature?", ButtonType.NO, ButtonType.YES);
+            if(response.isEmpty() || response.get() != ButtonType.YES) {
+                return null;
+            }
+        }
+
+        Wallet signingWallet = walletNode.getWallet();
+        if(signingWallet.getPolicyType() == PolicyType.SINGLE_SP) {
+            return Bip322.getBip322SignatureFromPsbtSp(signedPsbt);
+        }
+
+        ECKey pubKey = signingWallet.getKeystores().getFirst().getPubKey(walletNode);
+        return Bip322.getBip322SignatureFromPsbt(signingWallet.getScriptType(), signedPsbt, pubKey);
+    }
+
+    private void addBip322DerivationInfo(PSBT psbt, Wallet signingWallet) {
+        ScriptType scriptType = signingWallet.getScriptType();
+        PSBTInput psbtInput = psbt.getPsbtInputs().get(0);
+        Keystore keystore = signingWallet.getKeystores().get(0);
+        ECKey pubKey = keystore.getPubKey(walletNode);
+        KeyDerivation fullDerivation = keystore.getKeyDerivation().extend(walletNode.getDerivation());
+
+        if(scriptType == ScriptType.P2TR) {
+            psbtInput.setTapInternalKey(pubKey);
+            psbtInput.getTapDerivedPublicKeys().put(ECKey.fromPublicOnly(pubKey.getPubKeyXCoord()), Map.of(fullDerivation, Collections.emptyList()));
+        } else {
+            psbtInput.getDerivedPublicKeys().put(scriptType.getOutputKey(signingWallet.getPolicyType(), pubKey), fullDerivation);
+        }
+    }
+
     private void scanQr() {
         QRScanDialog qrScanDialog = new QRScanDialog();
         qrScanDialog.initOwner(getDialogPane().getScene().getWindow());
         Optional<QRScanDialog.Result> optionalResult = qrScanDialog.showAndWait();
         if(optionalResult.isPresent()) {
             QRScanDialog.Result result = optionalResult.get();
-            if(result.payload != null) {
+            if(result.psbt != null) {
+                try {
+                    String sig = extractBip322Signature(result.psbt);
+                    if(sig != null) {
+                        signature.clear();
+                        signature.appendText(sig);
+                    }
+                } catch(Exception e) {
+                    log.error("Error extracting BIP-322 signature from PSBT", e);
+                    AppServices.showErrorDialog("Error extracting signature", e.getMessage());
+                }
+            } else if(result.payload != null) {
                 signature.clear();
                 signature.appendText(result.payload);
             } else if(result.exception != null) {
@@ -491,6 +602,132 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
                 showErrorDialog("Error scanning QR", result.exception.getMessage());
             } else {
                 AppServices.showErrorDialog("Invalid QR Code", "Cannot parse QR code into a signature.");
+            }
+        }
+    }
+
+    private void exportFile() {
+        if(walletNode == null) {
+            AppServices.showErrorDialog("Address not in wallet", "The provided address is not present in the currently selected wallet.");
+            return;
+        }
+
+        if(isBip322()) {
+            exportBip322File();
+            return;
+        }
+
+        StringJoiner joiner = new StringJoiner("\n");
+        joiner.add(message.getText().trim().replaceAll("\r*\n*", ""));
+        //Note we can expect a single keystore due to the check in the constructor
+        KeyDerivation firstDerivation = walletNode.getWallet().getKeystores().get(0).getKeyDerivation();
+        joiner.add(KeyDerivation.writePath(firstDerivation.extend(walletNode.getDerivation()).getDerivation(), true));
+        joiner.add(walletNode.getWallet().getScriptType().toString());
+
+        Stage window = new Stage();
+
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Save Text File");
+        fileChooser.setInitialFileName("signmessage.txt");
+        AppServices.moveToActiveWindowScreen(window, 800, 450);
+        File file = fileChooser.showSaveDialog(window);
+        if(file != null) {
+            if(!file.getName().toLowerCase(Locale.ROOT).endsWith(".txt")) {
+                file = new File(file.getAbsolutePath() + ".txt");
+            }
+
+            try(BufferedWriter writer = new BufferedWriter(new FileWriter(file, StandardCharsets.UTF_8))) {
+                writer.write(joiner.toString());
+            } catch(IOException e) {
+                log.error("Error saving signing message", e);
+                AppServices.showErrorDialog("Error saving signing message", "Cannot write to " + file.getAbsolutePath());
+            }
+        }
+    }
+
+    private void exportBip322File() {
+        Wallet signingWallet = walletNode.getWallet();
+        PSBT psbt = buildBip322Psbt(signingWallet);
+
+        Stage window = new Stage();
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Save PSBT File");
+        fileChooser.setInitialFileName("bip322-signmessage.psbt");
+        AppServices.moveToActiveWindowScreen(window, 800, 450);
+        File file = fileChooser.showSaveDialog(window);
+        if(file != null) {
+            try(OutputStream os = new FileOutputStream(file)) {
+                os.write(psbt.getForExport().serialize());
+            } catch(IOException e) {
+                log.error("Error saving BIP-322 PSBT", e);
+                AppServices.showErrorDialog("Error saving PSBT", "Cannot write to " + file.getAbsolutePath());
+            }
+        }
+    }
+
+    private void importFile() {
+        Stage window = new Stage();
+
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Open Signed File");
+        fileChooser.getExtensionFilters().addAll(
+                new FileChooser.ExtensionFilter("All Files", OsType.getCurrent().equals(OsType.UNIX) ? "*" : "*.*"),
+                new FileChooser.ExtensionFilter("Text Files", "*.txt"),
+                new FileChooser.ExtensionFilter("PSBT Files", "*.psbt")
+        );
+
+        AppServices.moveToActiveWindowScreen(window, 800, 450);
+        File file = fileChooser.showOpenDialog(window);
+
+        if(file != null) {
+            if(file.getName().toLowerCase(Locale.ROOT).endsWith(".psbt") || isBip322()) {
+                if(walletNode == null) {
+                    AppServices.showErrorDialog("Address not in wallet", "The provided address is not present in the currently selected wallet.");
+                    return;
+                }
+                try {
+                    byte[] psbtBytes = Files.readAllBytes(file.toPath());
+                    PSBT signedPsbt = new PSBT(psbtBytes, false);
+                    String sig = extractBip322Signature(signedPsbt);
+                    if(sig != null) {
+                        signature.clear();
+                        signature.appendText(sig);
+                    }
+                    return;
+                } catch(Exception e) {
+                    if(file.getName().toLowerCase(Locale.ROOT).endsWith(".psbt")) {
+                        log.error("Error loading signed PSBT", e);
+                        AppServices.showErrorDialog("Error loading signed PSBT", e.getMessage());
+                        return;
+                    }
+                    //Fall through to text handling for non-.psbt files
+                }
+            }
+
+            try {
+                String content = Files.readString(file.toPath(), StandardCharsets.UTF_8);
+                Matcher matcher = signedMessagePattern.matcher(content);
+                if(matcher.matches()) {
+                    String signedMessage = matcher.group(1);
+                    String signedAddress = matcher.group(2);
+                    String signedSignature = matcher.group(3);
+
+                    if(!message.getText().isEmpty() && !signedMessage.trim().equals(message.getText().trim().replaceAll("\r*\n*", ""))) {
+                        AppServices.showErrorDialog("Incorrect Message", "The file contained a different message of:\n\n" + signedMessage);
+                        return;
+                    } else if(!signedAddress.trim().equals(address.getText().trim())) {
+                        AppServices.showErrorDialog("Incorrect Address", "The file contained a different address of:\n\n" + signedAddress);
+                        return;
+                    }
+
+                    message.setText(signedMessage);
+                    signature.setText(signedSignature);
+                } else {
+                    signature.setText(content);
+                }
+            } catch(IOException e) {
+                log.error("Error loading signed message", e);
+                AppServices.showErrorDialog("Error loading signed message", e.getMessage());
             }
         }
     }
@@ -537,6 +774,39 @@ public class MessageSignDialog extends Dialog<ButtonBar.ButtonData> {
             });
             EventManager.get().post(new StorageEvent(storage.getWalletId(wallet), TimedEvent.Action.START, "Decrypting wallet..."));
             decryptWalletService.start();
+        }
+    }
+
+    private class MessageSignDialogPane extends DialogPane {
+        @Override
+        protected Node createButton(ButtonType buttonType) {
+            if(buttonType.getButtonData() == ButtonBar.ButtonData.LEFT) {
+                SplitMenuButton signByButton = new SplitMenuButton();
+                signByButton.setText("Sign by QR");
+                signByButton.setDisable(wallet == null);
+                signByButton.setGraphic(getGlyph(new Glyph(FontAwesome5.FONT_NAME, FontAwesome5.Glyph.QRCODE)));
+                signByButton.setGraphicTextGap(5);
+                signByButton.setOnAction(event -> {
+                    showQr();
+                });
+                MenuItem exportFile = new MenuItem("Sign by File...");
+                exportFile.setGraphic(getGlyph(new Glyph(FontAwesome5.FONT_NAME, FontAwesome5.Glyph.FILE_EXPORT)));
+                exportFile.setOnAction(event -> {
+                    exportFile();
+                });
+                MenuItem importFile = new MenuItem("Load Signed File...");
+                importFile.setGraphic(getGlyph(new Glyph(FontAwesome5.FONT_NAME, FontAwesome5.Glyph.FILE_IMPORT)));
+                importFile.setOnAction(event -> {
+                    importFile();
+                });
+                signByButton.getItems().addAll(exportFile, importFile);
+                final ButtonBar.ButtonData buttonData = buttonType.getButtonData();
+                ButtonBar.setButtonData(signByButton, buttonData);
+
+                return signByButton;
+            }
+
+            return super.createButton(buttonType);
         }
     }
 }
